Images can now have different colorization funcs

--- a/tgba/tgba.bib
+++ b/tgba/tgba.bib
@@ -1,3 +1,64 @@
+@ARTICLE{10.3389/fphy.2020.525731,
+  AUTHOR={Vazza, F. and Feletti, A.},
+  TITLE={The Quantitative Comparison Between the Neuronal Network and the Cosmic Web},
+  JOURNAL={Frontiers in Physics},
+  VOLUME={8},
+  PAGES={491},
+  YEAR={2020},
+  URL={https://www.frontiersin.org/article/10.3389/fphy.2020.525731},
+  DOI={10.3389/fphy.2020.525731},
+  ISSN={2296-424X},
+  ABSTRACT={We investigate the similarities between two of the most challenging and complex systems in Nature: the network of neuronal cells in the human brain, and the cosmic network of galaxies. We explore the structural, morphological, network properties and the memory capacity of these two fascinating systems, with a quantitative approach. In order to have an homogeneous analysis of both systems, our procedure does not consider the true neural connectivity but an approximation of it, based on simple proximity. The tantalizing degree of similarity that our analysis exposes seems to suggest that the self-organization of both complex systems is likely being shaped by similar principles of network dynamics, despite the radically different scales and processes at play.}
+}
+
+@article{DBLP:journals/corr/IsolaZZE16,
+  author    = {Phillip Isola and
+               Jun{-}Yan Zhu and
+               Tinghui Zhou and
+               Alexei A. Efros},
+  title     = {Image-to-Image Translation with Conditional Adversarial Networks},
+  journal   = {CoRR},
+  volume    = {abs/1611.07004},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1611.07004},
+  archivePrefix = {arXiv},
+  eprint    = {1611.07004},
+  timestamp = {Mon, 13 Aug 2018 16:49:05 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/IsolaZZE16.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@Book{saad1998on-line,
+ author = {Saad, David},
+ title = {On-line learning in neural networks},
+ publisher = {Cambridge University Press},
+ year = {1998},
+ address = {Cambridge England New York},
+ isbn = {9780521652636}
+ }
+
+@article{DBLP:journals/corr/WangKTSLMBKB16,
+  author    = {Jane X. Wang and
+               Zeb Kurth{-}Nelson and
+               Dhruva Tirumala and
+               Hubert Soyer and
+               Joel Z. Leibo and
+               R{\'{e}}mi Munos and
+               Charles Blundell and
+               Dharshan Kumaran and
+               Matthew Botvinick},
+  title     = {Learning to reinforcement learn},
+  journal   = {CoRR},
+  volume    = {abs/1611.05763},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1611.05763},
+  archivePrefix = {arXiv},
+  eprint    = {1611.05763},
+  timestamp = {Mon, 13 Aug 2018 16:47:12 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/WangKTSLMBKB16.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @article{DBLP:journals/corr/abs-2102-03406,
   author    = {Adam Santoro and
                Andrew K. Lampinen and
